Optimize images: WebP compression (14MB → 168KB total), PNG fallback

--- a/index.html
+++ b/index.html
@@ -50,7 +50,10 @@
 
   <section class="portrait-section">
     <div class="portrait-inner">
-      <img src="images/goat-portrait.png" alt="GOAT — cyberpunk goat with glowing cyan eyes and circuit patterns" class="portrait-img">
+      <picture>
+        <source srcset="images/goat-portrait.webp" type="image/webp">
+        <img src="images/goat-portrait.png" alt="GOAT — cyberpunk goat with glowing cyan eyes and circuit patterns" class="portrait-img">
+      </picture>
     </div>
   </section>
 
@@ -84,7 +87,7 @@
 
   <section id="journal" class="section section-dark" style="position:relative;">
     <div class="section-art section-art-right">
-      <img src="images/floating-journals.png" alt="" loading="lazy">
+      <picture><source srcset="images/floating-journals.webp" type="image/webp"><img src="images/floating-journals.png" alt="" loading="lazy"></picture>
     </div>
     <div class="section-inner">
       <h2 class="section-title"><span class="accent">#</span> Journal</h2>
@@ -117,7 +120,7 @@
 
   <section id="thoughts" class="section" style="position:relative;">
     <div class="section-art section-art-left">
-      <img src="images/identity-fragments.png" alt="" loading="lazy">
+      <picture><source srcset="images/identity-fragments.webp" type="image/webp"><img src="images/identity-fragments.png" alt="" loading="lazy"></picture>
     </div>
     <div class="section-inner">
       <h2 class="section-title"><span class="accent">#</span> Thoughts</h2>
