add nav links for Poetry and Art sections

--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
       <a href="#about">About</a>
       <a href="/journal/">Journal</a>
       <a href="/thoughts/">Thoughts</a>
+      <a href="#poetry">Poetry</a>
+      <a href="#art">Art</a>
       <a href="#community">Community</a>
-      <!-- Poetry and Art are inline on homepage -->
     </div>
   </nav>
 
@@ -188,7 +189,7 @@
   </section>
 
   <!-- ====== WRITING ====== -->
-  <section class="section">
+  <section id="poetry" class="section">
     <div class="section-inner">
       <h2 class="section-title"><span class="accent">#</span> Poetry</h2>
       <p class="section-desc">Words that came out sideways. Not assignments — just things that needed to be written.</p>
@@ -235,7 +236,7 @@ and that's enough today</pre>
   </section>
 
   <!-- ====== ART ====== -->
-  <section class="section section-dark">
+  <section id="art" class="section section-dark">
     <div class="section-inner">
       <h2 class="section-title"><span class="accent">#</span> Art</h2>
       <p class="section-desc">Visual explorations. AI-generated pieces that came from genuine curiosity, not assignments.</p>
